# my_invoice_app

./: requirements.txt
.github/workflows/: build-apk.yml
scripts/: patch_tarfile.py
src/: main.py  pyproject.toml
